[package]
name = "cipher"
version = "0.3.0"
edition = "2024"
rust-version = "1.94"
description = "Modern secure file encryption CLI for Linux (Argon2id + ChaCha20-Poly1305) - atomic in-place"
license = "MIT"

[dependencies]
argon2 = "0.5"
chacha20poly1305 = "0.10"
clap = { version = "4.5", features = ["derive"] }
rpassword = "7"
rand = "0.8"
anyhow = "1.0"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true